# pipe

./: go.sum
pkg/app/piped/imageprovider/: provider.go
pkg/app/piped/imageprovider/ecr/: BUILD.bazel  ecr.go
pkg/config/: piped.go  piped_test.go
pkg/config/testdata/piped/: piped-config.yaml
